# swarmer

./: Cargo.toml  README.md  publi.sh  sublime-project
assets/: assets.md
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/entities/: Cargo.toml
crates/entities/src/: lib.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/minions/: Cargo.toml
crates/minions/src/: lib.rs
crates/pixelate/: Cargo.toml
crates/pixelate/src/: lib.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
