[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = "0.13.1"
bevy_framepace = "0.15.0"
# bevy_embedded_assets = "0.10.2"

[dependencies.bevy]
version = "0.13.1"
default-features = false
features = [
    # "dynamic_linking",
    # "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "vorbis",
    "x11",
    "bevy_gizmos",
    # "android_shared_stdcxx",
    # "tonemapping_luts",
    "default_font",
    # "webgl2",
    "file_watcher",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true
strip = true
codegen-units = 1
#prefer-dynamic = false
debug = false
panic = 'abort'