[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true }
bevy_framepace = { workspace = true }
bevy_scriptum = { workspace = true }
leafwing-input-manager = { workspace = true }

pixelate = { path = "../pixelate" }

entities = { path = "../entities" }
player = { path = "../player" }
# world = { path = "../world" }
# audio = { path = "../audio" }
# input = { path = "../input" }
