[package]
name = "player"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }

pixelate = { path = "../pixelate" }
entities = { path = "../entities" }
minions = { path = "../minions" }
input = { path = "../input" }
assets = { path = "../assets" }